--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -28,7 +28,7 @@
             href: ~/Use/Data-Sources.md
           - name: Assign group-based licenses
             href: ~/Use/Group-Based-Licensing.md
-          - name: Assign roles with Powershell
+          - name: Assign roles with PowerShell
             href: ~/use/using-powershell-to-assign-roles.md
           - name: Time zones for Workplace Analytics
             href: ~/Use/Timezones-for-Workplace-analytics.md
