--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,22 @@
 {
   "docsets_to_publish": [
     {
+      "docset_name": "OfficeDocs-MyAnalytics",
+      "build_source_folder": "MyAnalytics",
+      "build_output_subfolder": "OfficeDocs-MyAnalytics",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
+    },
+    {
       "docset_name": "OfficeDocs-WorkplaceAnalytics",
       "build_source_folder": "WorkplaceAnalytics",
       "build_output_subfolder": "OfficeDocs-WorkplaceAnalytics",
@@ -49,7 +65,7 @@
     ]
   },
   "need_generate_pdf_url_template": true,
-  "Targets": {
+  "targets": {
     "Pdf": {
       "template_folder": "_themes.pdf"
     }
