--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -30,6 +30,8 @@
             href: ~/Use/Group-Based-Licensing.md
           - name: Assign roles with PowerShell
             href: ~/use/using-powershell-to-assign-roles.md
+          - name: Assigning user and group roles
+            href: ~/Use/Assigning-wpa-user-and-group-roles-in-azure-ad.md  
           - name: Time zones for Workplace Analytics
             href: ~/Use/Timezones-for-Workplace-analytics.md
       - name: Features
