--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -28,6 +28,8 @@
             href: ~/Use/Data-Sources.md
           - name: Assign group-based licenses
             href: ~/Use/Group-Based-Licensing.md
+          - name: Assign licences with PowerShell
+            href: ~/use/Assigning-licenses-with-powershell.md
           - name: Assign roles with PowerShell
             href: ~/use/using-powershell-to-assign-roles.md
           - name: User Roles
@@ -175,6 +177,4 @@
           - name: Habit playbooks
             href: MyAnalytics/Use/MyA-Adoption/Adopt-Habit-playbooks.md
             homepage: /myanalytics/use-myanalytics/adopt-myanalytics/habit-resources/habit-playbooks
-
-
-            
+ 
