--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -72,6 +72,8 @@
             href: ~/Tutorials/Person-queries.md
           - name: Meeting queries
             href: ~/Tutorials/Meeting-queries.md
+          - name: Power BI Templates
+            href: ~/Tutorials/Power-bi-templates.md            
           - name: Group-to-group queries
             href: ~/Tutorials/Group-to-group-queries.md
           - name: Person-to-group queries
