--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-# This is a comment.
+# This is a comment
 # Each line is a file pattern followed by one or more owners.
 
 # These owners will be the default owners for everything in
