--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -13,4 +13,4 @@
 # *.js    @octocat @github/js
 
 # You can also use email addresses if you prefer.
-/WorkplaceAnalytics/  @paul9955 @madehmer @rodonahu
+/WorkplaceAnalytics/  @paul9955 @madehmer @rodonahu @AndreaBarr
