change to hubpage

--- a/WorkplaceAnalytics/index.yml
+++ b/WorkplaceAnalytics/index.yml
@@ -9,7 +9,7 @@ metadata:
   ms.service: wpa
   ms.tgt_pltfrm: na
   ms.devlang: na
-  ms.topic: landing-page
+  ms.topic: hubpage
   ms.date: 11/2/2018
   ms.author: madehmer
 abstract:
