--- a/MyAnalytics/index.yml
+++ b/MyAnalytics/index.yml
@@ -9,7 +9,7 @@ metadata:
   ms.service: wpa
   ms.tgt_pltfrm: na
   ms.devlang: na
-  ms.topic: landing-page
+  ms.topic: hubpage
   ms.date: 11/2/2018
   ms.author: madehmer
 abstract:
@@ -26,7 +26,7 @@ sections:
         - href: https://docs.microsoft.com/en-us/workplace-analytics/myanalytics/mya-landing-page
           html: <p>Learn what MyAnalytics is and how to use it to build better work habits and better manage your time.</p>
           image:
-            src: ../Images/icon-personaldata.png
+            src: ../WorkplaceAnalytics/Images/icon-personaldata.png
           title: Introducing MyAnalytics
         - href: https://docs.microsoft.com/en-us/workplace-analytics/myanalytics/overview/privacy-guide
           html: <p>Learn how MyAnalytics protects your personal data and keeps it private.</p>
