--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -1,5 +1,5 @@
 - name: Workplace Analytics
-  href: ~/index_orig.md
+  href: ~/index-orig.md
   expanded: true
   items:
     - name: Privacy and data protection
