--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -84,9 +84,9 @@
             href: ~/Use/Csv-query-output-file.md
           - name: Create meeting exclusion rules
             items: 
-              - name: Meeting exclude rules - Walkthrough
+              - name: Exclusion rules - Walkthrough
                 href: ~/tutorials/meeting-exclusion-rules.md
-              - name: Meeting exclusion rules - Concepts
+              - name: Exclusion rules - Tools and concepts
                 href: ~/tutorials/meeting-exclusion-concept.md       
           - name: Teamwork solution
             href: ~/Tutorials/Solutions-intro.md  
