--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -58,8 +58,8 @@
             href: ~/Use/View-download-and-export-query-results.md
           - name: Understand meeting exclusions
             href: ~/Use/Understand-meeting-exclusions.md
-          - name: Create custom meeting exclusion rules
-            href: ~/Use/Create-custom-meeting-exclusions-rules.md
+          - name: Create custom meeting exclusions rules
+            href: ~/Use/Create-custom-meeting-exclusion-rules.md
       - name: Tutorials
         items:
           - name: Queries overview
