--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -58,7 +58,7 @@
             href: ~/Use/View-download-and-export-query-results.md
           - name: Understand meeting exclusions
             href: ~/Use/Understand-meeting-exclusions.md
-          - name: Create custom meeting exclusions rules
+          - name: Create custom meeting exclusion rules
             href: ~/Use/Create-custom-meeting-exclusion-rules.md
       - name: Tutorials
         items:
