--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -10,39 +10,52 @@
           href: ~/Privacy/Privacy-and-Data-Access.md
         - name: Privacy settings 
           href: ~/Privacy/Privacy-considerations.md 
-    - name: Setup    
-      href: ~/Setup/Set-up-Workplace-Analytics.md  
-    - name: Get started
-      href: ~/Overview/Get-started.md
-    - name: Use Workplace Analytics
+    - name: Setup and Maintenance
       items:
-      - name: Setup and maintenance
-        items:
-          - name: Workplace Analytics settings
-            href: ~/Use/Settings.md
-          - name: Prepare organizational data
-            href: ~/Setup/Prepare-organizational-data.md
-          - name: Upload organizational data
-            href: ~/Setup/Upload-organizational-data.md                         
-          - name: Data sources
-            href: ~/Use/Data-Sources.md
-          - name: Assign group-based licenses
-            href: ~/Use/Group-Based-Licensing.md
-          - name: Assign licences with PowerShell
-            href: ~/use/Assigning-licenses-with-powershell.md
-          - name: User Roles
-            href: ~/Use/User-Roles.md
-          - name: Assigning user and group roles
-            href: ~/Use/Assigning-wpa-user-and-group-roles-in-azure-ad.md
-          - name: Assign roles with PowerShell
-            href: ~/use/using-powershell-to-assign-roles.md    
-          - name: Time zones for Workplace Analytics
-            href: ~/Use/Timezones-for-Workplace-analytics.md
-      - name: Analyze
-        items:
-          - name: Analyze
-            href: ~/Use/analyze-intro.md
-            items: 
+        - name: Set up Workplace Analytics
+          href: ~/setup/set-up-workplace-analytics.md
+        - name: Maintain Workplace Analytics    
+          href: ~/setup/maintain-workplace-analytics.md    
+        - name: Assign licenses
+          href: ~/setup/assign-licenses-to-population.md          
+        - name: Assign roles
+          href: ~/setup/assign-roles-to-wpa-admins.md            
+        - name: Configure settings
+          href: ~/setup/configure-wpa-settings.md
+        - name: Workplace Analytics settings
+          href: ~/Use/Settings.md
+  #        - name: Privacy settings
+  #          href: ~/setup/configure-wpa-privacy-settings.md
+  #        - name: Workplace Analytics settings
+  #          href: ~/Use/Settings.md
+        - name: Prepare organizational data
+          href: ~/setup/prepare-organizational-data.md
+        - name: Upload organizational data
+          items: 
+            - name: First upload
+              href: ~/setup/upload-organizational-data-1st.md       
+            - name: Subsequent uploads
+              href: ~/setup/upload-organizational-data.md         
+        - name: Assign group-based licenses
+          href: ~/Use/Group-Based-Licensing.md
+        - name: Assign licenses with PowerShell
+          href: ~/use/Assigning-licenses-with-powershell.md
+        - name: User Roles
+          href: ~/Use/User-Roles.md
+        - name: Assigning user and group roles
+          href: ~/Use/Assigning-wpa-user-and-group-roles-in-azure-ad.md
+        - name: Assign roles with PowerShell
+          href: ~/use/using-powershell-to-assign-roles.md  
+        - name: Data sources
+          href: ~/Use/Data-Sources.md            
+        - name: Time zones for Workplace Analytics
+          href: ~/Use/Timezones-for-Workplace-analytics.md
+    - name: Use Workplace Analytics
+      href: ~/Overview/Get-started.md
+      items:
+        - name: Analyze
+          href: ~/Use/analyze-intro.md
+          items:
             - name: Explore
               href: ~/Use/explore-intro.md  
               items: 
