--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -104,7 +104,7 @@
                 - name: Create custom meeting exclusion rules
                   href: ~/Use/Create-custom-meeting-exclusions-rules.md     
         - name: Solutions
-          href: ~/tutorials/solutions-intro-placeholder.md
+  #       href: ~/tutorials/solutions-intro-placeholder.md
           items:
             - name: Teamwork solution
               href: ~/tutorials/Solutions-intro.md  
