--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -4,114 +4,122 @@
   items:
     - name: Privacy and data protection
       items:
-        - name: Privacy considerations 
-          href: ~/Privacy/Privacy-considerations.md 
+        - name: Data-protection considerations                   
+          href: ~/Privacy/Data-protection-summary.md        
         - name: Privacy and data access
           href: ~/Privacy/Privacy-and-Data-Access.md
-        - name: Data-protection considerations (summary)                  
-          href: ~/Privacy/Data-protection-summary.md
-    - name: Setup    
-      href: ~/Setup/Set-up-Workplace-Analytics.md  
-    - name: Get started
-      href: ~/Overview/Get-started.md
-    - name: Use Workplace Analytics
+        - name: Privacy settings 
+          href: ~/Privacy/Privacy-considerations.md 
+    - name: Setup and Maintenance
       items:
-      - name: Administration
-        items:
-          - name: Workplace Analytics settings
-            href: ~/Use/Settings.md
-          - name: Prepare organizational data
-            href: ~/Setup/Prepare-organizational-data.md
-          - name: Upload organizational data
-            href: ~/Setup/Upload-organizational-data.md                         
-          - name: Data sources
-            href: ~/Use/Data-Sources.md
-          - name: Assign group-based licenses
-            href: ~/Use/Group-Based-Licensing.md
-          - name: Assign licences with PowerShell
-            href: ~/use/Assigning-licenses-with-powershell.md
-          - name: User Roles
-            href: ~/Use/User-Roles.md
-          - name: Assigning user and group roles
-            href: ~/Use/Assigning-wpa-user-and-group-roles-in-azure-ad.md
-          - name: Assign roles with PowerShell
-            href: ~/use/using-powershell-to-assign-roles.md    
-          - name: Time zones for Workplace Analytics
-            href: ~/Use/Timezones-for-Workplace-analytics.md
-      - name: Features
-        items:
-          - name: Explore metrics - Week in the life
-            href: ~/Use/Explore-Metrics-week-in-the-life.md
-          - name: Explore metrics - Meetings overview
-            href: ~/Use/Explore-Metrics-meetings-overview.md
-          - name: Explore metrics - Management and coaching
-            href: ~/Use/Explore-Metrics-management-and-coaching.md
-          - name: Explore metrics – Internal networks
-            href: ~/Use/Explore-Metrics-internal-networks.md
-          - name: Explore metrics – External collaboration
-            href: ~/Use/Explore-Metrics-external-collaboration.md 
-          - name: Chart types
-            href: ~/Use/Chart-Types.md
-          - name: Create queries test
-            href: ~/Use/Create-Queries.md
-            name: View, download, and export query results
-            href: ~/Use/View-download-and-export-query-results.md
-#          - name: Understand meeting exclusions
-#            href: ~/Use/Understand-meeting-exclusions.md
-#          - name: Create custom meeting exclusion rules
-#            href: ~/Use/Create-custom-meeting-exclusions-rules.md
-      - name: Tutorials
-        items:
-          - name: Queries overview
-            href: ~/Tutorials/Create-queries.md            
-          - name: Query basics
-            href: ~/Tutorials/Query-basics.md
-          - name: Customize a metric
-            href: ~/Tutorials/Customize-a-metric.md  
-          - name: Person queries
-            href: ~/Tutorials/Person-queries.md
-          - name: Meeting queries
-            href: ~/Tutorials/Meeting-queries.md
-          - name: Power BI Templates
-            href: ~/Tutorials/Power-bi-templates.md            
-          - name: Group-to-group queries
-            href: ~/Tutorials/Group-to-group-queries.md
-          - name: Person-to-group queries
-            href: ~/Tutorials/Person-to-group-queries.md            
-          - name: Query auto-refresh option
-            href: ~/Tutorials/Query-auto-refresh.md 
-          - name: Understand and interpret query output
-            href: ~/Use/Csv-query-output-file.md
-          - name: Meeting exclusion rules
-            href: ~/Tutorials/meeting-exclusions-intro.md            
-            items: 
-              - name: Exclusion rules - Walkthrough
-                href: ~/tutorials/meeting-exclusion-rules.md
-              - name: Exclusion rules - Tools and concepts
-                href: ~/tutorials/meeting-exclusion-concept.md       
-          - name: Teamwork solution
-            href: ~/Tutorials/Solutions-intro.md  
-            items: 
-              - name: Solution - Walkthrough    
-                href: ~/Tutorials/Solutions-task.md 
-              - name: Solution - Participants
-                href: ~/Tutorials/Solutions-participants.md                                       
-              - name: Solution - Concepts
-                href: ~/Tutorials/Solutions-conceptual.md                                  
-      - name: Reference
-        items:
-          - name: Glossary
-            href: ~/Use/Glossary.md          
-          - name: Workplace Analytics metrics
-            href: ~/Use/metric-definitions.md
-          - name: Supported languages and guidelines
-            href: ~/Overview/Supported-languages.md
+        - name: Set up Workplace Analytics
+          href: ~/setup/set-up-workplace-analytics.md
+        - name: Maintain Workplace Analytics    
+          href: ~/setup/maintain-workplace-analytics.md    
+        - name: Assign licenses
+          href: ~/setup/assign-licenses-to-population.md          
+        - name: Assign roles
+          href: ~/setup/assign-roles-to-wpa-admins.md            
+        - name: Workplace Analytics settings
+          href: ~/Use/Settings.md
+  #        - name: Privacy settings
+  #          href: ~/setup/configure-wpa-privacy-settings.md
+  #        - name: Workplace Analytics settings
+  #          href: ~/Use/Settings.md
+        - name: Prepare organizational data
+          href: ~/setup/prepare-organizational-data.md
+        - name: Upload organizational data
+          items: 
+            - name: First upload
+              href: ~/setup/upload-organizational-data-1st.md       
+            - name: Subsequent uploads
+              href: ~/setup/upload-organizational-data.md         
+        - name: Assign group-based licenses
+          href: ~/Use/Group-Based-Licensing.md
+        - name: Assign licenses with PowerShell
+          href: ~/use/Assigning-licenses-with-powershell.md
+        - name: User roles
+          href: ~/Use/User-Roles.md
+        - name: Assigning user and group roles
+          href: ~/Use/Assigning-wpa-user-and-group-roles-in-azure-ad.md
+        - name: Assign roles with PowerShell
+          href: ~/use/using-powershell-to-assign-roles.md  
+        - name: Data sources
+          href: ~/Use/Data-Sources.md            
+        - name: Time zones for Workplace Analytics
+          href: ~/Use/Timezones-for-Workplace-analytics.md
+    - name: Use Workplace Analytics
+      href: ~/Overview/Get-started.md
+      items:
+        - name: Analyze
+          href: ~/Use/analyze-intro.md
+          items:
+            - name: Explore
+              href: ~/Use/explore-intro.md  
+              items: 
+                - name: Week in the life
+                  href: ~/Use/Explore-Metrics-week-in-the-life.md
+                - name: Meetings overview
+                  href: ~/Use/Explore-Metrics-meetings-overview.md
+                - name: Management and coaching
+                  href: ~/Use/Explore-Metrics-management-and-coaching.md
+                - name: Internal networks
+                  href: ~/Use/Explore-Metrics-internal-networks.md
+                - name: External collaboration
+                  href: ~/Use/Explore-Metrics-external-collaboration.md 
+                - name: Chart types
+                  href: ~/Use/Chart-Types.md
+            - name: Queries
+              href: ~/tutorials/Query-basics.md 
+              items:
+                - name: Person queries
+                  href: ~/tutorials/Person-queries.md
+                - name: Meeting queries
+                  href: ~/tutorials/Meeting-queries.md                 
+                - name: Group-to-group queries
+                  href: ~/tutorials/Group-to-group-queries.md
+                - name: Person-to-group queries
+                  href: ~/tutorials/Person-to-group-queries.md                      
+                - name: Power BI templates
+                  href: ~/tutorials/power-bi-templates.md                  
+                - name: Customize a metric
+                  href: ~/tutorials/Customize-a-metric.md                    
+                - name: View, download, and export query results
+                  href: ~/Use/View-download-and-export-query-results.md
+                - name: Understand and interpret query output
+                  href: ~/Use/Csv-query-output-file.md
+                - name: Query auto-refresh option
+                  href: ~/tutorials/Query-auto-refresh.md 
+                - name: Understand meeting exclusions
+                  href: ~/Use/Understand-meeting-exclusions.md
+                - name: Create custom meeting exclusion rules
+                  href: ~/Use/Create-custom-meeting-exclusions-rules.md     
+        - name: Solutions
+  #       href: ~/tutorials/solutions-intro-placeholder.md
+          items:
+            - name: Teamwork solution
+              href: ~/tutorials/Solutions-intro.md  
+              items: 
+                - name: Solution - Walkthrough    
+                  href: ~/tutorials/Solutions-task.md 
+                - name: Solution - Participants
+                  href: ~/tutorials/Solutions-participants.md                                       
+                - name: Solution - Concepts
+                  href: ~/tutorials/Solutions-conceptual.md             
+    - name: Reference
+      items:
+        - name: Glossary
+          href: ~/Use/Glossary.md          
+        - name: Workplace Analytics metrics
+          href: ~/Use/metric-definitions.md
+        - name: Supported languages and guidelines
+          href: ~/Overview/Supported-languages.md
     - name: Known issues
       items:
         - name: Download a query report in UTF-8 format
-          href: ~/Tutorials/Download-UTF8-query-report.md
+          href: ~/tutorials/Download-UTF8-query-report.md
         - name: Workplace Analytics 500 error
-          href: ~/Tutorials/Wpa-tool-500-error.md
+          href: ~/tutorials/Wpa-tool-500-error.md
     - name: Get support
       href: ~/Overview/Getting-Support.md
 - name: MyAnalytics
