--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -90,10 +90,10 @@
                   href: ~/Use/Csv-query-output-file.md
                 - name: Query auto-refresh option
                   href: ~/tutorials/Query-auto-refresh.md 
-                - name: Understand meeting exclusions
-                  href: ~/Use/Understand-meeting-exclusions.md
-                - name: Create custom meeting exclusion rules
-                  href: ~/Use/Create-custom-meeting-exclusions-rules.md     
+ #               - name: Understand meeting exclusions
+ #                 href: ~/Use/Understand-meeting-exclusions.md
+ #               - name: Create custom meeting exclusion rules
+ #                 href: ~/Use/Create-custom-meeting-exclusions-rules.md     
         - name: Solutions
   #       href: ~/tutorials/solutions-intro-placeholder.md
           items:
