--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -90,6 +90,13 @@
                   href: ~/Use/Csv-query-output-file.md
                 - name: Query auto-refresh option
                   href: ~/tutorials/Query-auto-refresh.md 
+                - name: Meeting exclusion rules
+                  href: ~/Tutorials/meeting-exclusions-intro.md            
+                  items: 
+                    - name: Exclusion rules - Walkthrough
+                      href: ~/tutorials/meeting-exclusion-rules.md
+                    - name: Exclusion rules - Tools and concepts
+                      href: ~/tutorials/meeting-exclusion-concept.md   
  #               - name: Understand meeting exclusions
  #                 href: ~/Use/Understand-meeting-exclusions.md
  #               - name: Create custom meeting exclusion rules
