--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -28,7 +28,7 @@
           items: 
             - name: User roles
               href: ~/Use/User-Roles.md
-            - name: Assigning user and group roles
+            - name: Assign user and group roles
               href: ~/Use/Assigning-wpa-user-and-group-roles-in-azure-ad.md
             - name: Assign roles with PowerShell
               href: ~/use/using-powershell-to-assign-roles.md                    
