--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -93,7 +93,7 @@
                 - name: Meeting exclusion rules
                   href: ~/Tutorials/meeting-exclusions-intro.md            
                   items: 
-                    - name: Walkthrough
+                    - name: Walkthroughs
                       href: ~/tutorials/meeting-exclusion-rules.md
                     - name: Tools and concepts
                       href: ~/tutorials/meeting-exclusion-concept.md                  
