--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -7,10 +7,12 @@
     - name: Setup
       href: ./Setup/Mya-setup-checklist.md
     - name: Frequently asked questions
-      href: ./Overview/MyA-faq.md
-    - name: MyAnalytics Privacy 
-      items:
-      - name: MyAnalytics privacy guide 
+      href: ./Overview/MyA-faq.md        
+    - name: MyAnalytics for admins
+      items:     
+      - name: Setup
+        href: ./Setup/Mya-setup-checklist.md        
+      - name: MyAnalytics privacy guide for admins
         href: ./Overview/Privacy-Guide.md  
     - name: Use MyAnalytics
       items:      
@@ -28,6 +30,8 @@
           href: ./Use/mya-notifications.md
       - name: MyAnalytics tips
         href: ./Overview/Tips.md    
+#      - name: MyAnalytics data privacy
+#        href: ./overview/data-privacy.md         
       - name: Adopt MyAnalytics
         href: ./Use/MyA-Adoption/Adopt-myanalytics.md  
         items: 
