--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -4,13 +4,11 @@
   items:   
     - name: Why use MyAnalytics?
       href: ./Overview/Better-work-habits.md        
-    - name: Setup
-      href: ./Setup/Mya-setup-checklist.md
     - name: Frequently asked questions
       href: ./Overview/MyA-faq.md        
     - name: MyAnalytics for admins
       items:     
-      - name: Setup
+      - name: MyAnalytics Setup
         href: ./Setup/Mya-setup-checklist.md        
       - name: MyAnalytics privacy guide for admins
         href: ./Overview/Privacy-Guide.md  
