re-add enviro req's

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -16,6 +16,8 @@
           href: ~/setup/set-up-workplace-analytics.md
         - name: Maintain Workplace Analytics    
           href: ~/setup/maintain-workplace-analytics.md    
+        - name: Environment requirements    
+          href: ~/setup/environment-requirements.md    
         - name: Assign licenses
           href: ~/setup/assign-licenses-to-population.md
           items: 
