--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -153,7 +153,11 @@
         - name: Dashboard
           href: MyAnalytics/Use/dashboard.md
         - name: Add-in
-          href: MyAnalytics/Use/add-in.md
+          items: 
+          - name: Productivity insights
+            href: MyAnalytics/Use/productivity-insights.md
+          - name: Informative cards
+            href: MyAnalytics/Use/add-in.md
         - name: Email digest
           href: MyAnalytics/Use/email-digest.md
         - name: MyAnalytics nudges
