--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -21,6 +21,8 @@
         expanded: false
         href: ./use/MyA-elements.md
         items:
+        - name: Dashboard 2019
+          href: ./use/dashboard-2.md        
         - name: Dashboard
           href: ./use/dashboard.md
         - name: Add-in
