--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -21,7 +21,7 @@
         expanded: false
         href: ./use/MyA-elements.md
         items:
-        - name: Dashboard 2019
+        - name: Dashboard (Preview)
           href: ./use/dashboard-2.md        
         - name: Dashboard
           href: ./use/dashboard.md
